api-service.yml
apiVersion: v1 
kind: Service
metadata:
  name: short-api-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
  selector:
    components: back-end
