app-service.yml
apiVersion: v1 
kind: Service
metadata:
  name: short-app-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    components: front-end
